# Linkedin-Assistant

./: .env  Agents - Shortcut.lnk  README.md  main.py  output_leads.csv  package-lock.json  pyproject.toml  requirements.txt
Agents/agent_1/: graph.py  nodes.py
Agents/agent_2/: graph_2.py  nodes_2.py
Agents/agent_3/: graph_3.py  node_3.py
Agents/agent_4/: graph_4.py  node_4.py
Agents/agent_5/: graph_5.py  node_5.py
Agents/agent_6/: graph_6.py  node_6.py
Agents/core/: config.py  llm.py  state.py
Frontend/: App.jsx  index.html  package-lock.json  package.json  tailwind.config.js
Frontend/components/: Dashboard.jsx  InterviewStep.jsx  Messages.jsx  SearchStep.jsx
Frontend/src/: index.css
Frontend/src/api/: client.js
Frontend/src/components/: Messages.jsx  ProgressBar.jsx  ResultsStep.jsx  ScoredLeads.jsx  SearchStep.jsx  SenderProfile.jsx  SpaceBackground.jsx
Frontend/src/hooks/: useWebSocket.js
backend/: connections.py  main.py  render.yaml  schemas.py
backend/routes/: pipeline.py
backend/services/: session.py
