[project]
name = "linkdin-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.19.0",
    "anthropic>=0.28.0",
    "langchain>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langchain-mistralai>=1.1.2",
    "langgraph>=0.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
